--- a/C_S_B_Analysis.ipynb
+++ b/C_S_B_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "35c8b4a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "1ff92e6a",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "2    Credit Card                 Weekly  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "6dd03fee",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "cb58ca63",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "96b04bb4",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "f4a44b95",
    "metadata": {},
    "outputs": [
@@ -614,13 +614,13 @@
     }
    ],
    "source": [
-    "df['Review Rating'] = df.groupby('Category')['Review Rating'].transform(lambda x: x.fillna(x.median))\n",
-    "df['Review Rating'].isnull().sum()"
+    "df2['Review Rating'] = df2.groupby('Category')['Review Rating'].transform(lambda x: x.fillna(x.median))\n",
+    "df2['Review Rating'].isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "8e695258",
    "metadata": {},
    "outputs": [
@@ -635,21 +635,21 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# convert column text to Snake Case\n",
-    "df.columns = df.columns.str.lower()\n",
-    "df.columns = df.columns.str.replace(' ', '_')\n",
-    "df.columns"
+    "df2.columns = df2.columns.str.lower()\n",
+    "df2.columns = df2.columns.str.replace(' ', '_')\n",
+    "df2.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "2e6311a2",
    "metadata": {},
    "outputs": [
@@ -660,23 +660,23 @@
        "       'purchase_amount', 'location', 'size', 'color', 'season',\n",
        "       'review_rating', 'subscription_status', 'shipping_type',\n",
        "       'discount_applied', 'promo_code_used', 'previous_purchases',\n",
-       "       'payment_method', 'frequency_of_purchases'],\n",
+       "       'payment_method', 'frequency_of_purchases', 'purchase_frequency_days'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df.rename(columns={'purchase_amount_(usd)' : 'purchase_amount'})\n",
-    "df.columns"
+    "df2 = df2.rename(columns={'purchase_amount_(usd)' : 'purchase_amount'})\n",
+    "df2.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "76b22fc2",
    "metadata": {},
    "outputs": [
@@ -782,14 +782,14 @@
    "source": [
     "# create a column Age group\n",
     "label = ['young_adult', 'adult', 'mid_aged', 'senior']\n",
-    "df['age_group'] = pd.qcut(df['age'], q=4, labels= label)\n",
+    "df2['age_group'] = pd2.qcut(df2['age'], q=4, labels= label)\n",
     "\n",
-    "df[['age','age_group']].head(10)"
+    "df2[['age','age_group']].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "00d3bc7e",
    "metadata": {},
    "outputs": [
@@ -806,12 +806,12 @@
     }
    ],
    "source": [
-    "df['frequency_of_purchases'].unique()"
+    "df2['frequency_of_purchases'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "09d926b9",
    "metadata": {},
    "outputs": [],
@@ -828,12 +828,12 @@
     "    'Every 3 Months' : 90\n",
     "}\n",
     "\n",
-    "df['purchase_frequency_days'] = df['frequency_of_purchases'].map(frequency_mapping)"
+    "df2['purchase_frequency_days'] = df2['frequency_of_purchases'].map(frequency_mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "d67d0579",
    "metadata": {},
    "outputs": [
@@ -849,12 +849,12 @@
     }
    ],
    "source": [
-    "df['purchase_frequency_days'].unique()"
+    "df2['purchase_frequency_days'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e0ec5603",
    "metadata": {},
    "outputs": [
@@ -928,12 +928,12 @@
     }
    ],
    "source": [
-    "df[['discount_applied', 'promo_code_used']].head()"
+    "df2[['discount_applied', 'promo_code_used']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "03c906e9",
    "metadata": {},
    "outputs": [
@@ -949,12 +949,12 @@
     }
    ],
    "source": [
-    "(df['promo_code_used'] == df['discount_applied']).all()"
+    "(df2['promo_code_used'] == df2['discount_applied']).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "df7082e7",
    "metadata": {},
    "outputs": [
@@ -976,12 +976,12 @@
     }
    ],
    "source": [
-    "df.columns"
+    "df2.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "7c3a30b2",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "id": "c281e5d4",
    "metadata": {},
    "outputs": [
